--- a/src/resources/Main.fxml
+++ b/src/resources/Main.fxml
@@ -43,7 +43,7 @@
                   </AnchorPane>
               </content>
             </Tab>
-          <Tab fx:id="tabOrders" closable="false" text="Orders">
+          <Tab fx:id="tabOrders" closable="false" disable="true" text="Orders">
                <content>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
@@ -58,10 +58,10 @@
                                               <TableColumn fx:id="tabOrderId" prefWidth="75.0" text="order_id" />
                                               <TableColumn fx:id="tabOrderFetchedTime" prefWidth="92.33331298828125" text="fetched_time" />
                                                 <TableColumn fx:id="tabOrderQty" prefWidth="57.66668701171875" text="qty" />
-                                                <TableColumn fx:id="tabOrderStatus" prefWidth="57.66668701171875" text="status" />
-                                                <TableColumn fx:id="tabOrderProdName" prefWidth="355.0" text="prod_name" />
-                                                <TableColumn fx:id="tabOrderProdBegin" minWidth="0.0" prefWidth="173.0" text="prod_begin" />
-                                                <TableColumn fx:id="tabOrderProdEnd" minWidth="8.0" prefWidth="175.0" text="prod_end" />
+                                                <TableColumn fx:id="tabOrderStatus" prefWidth="151.33331298828125" text="status" />
+                                                <TableColumn fx:id="tabOrderProdName" prefWidth="356.66668701171875" text="prod_name" />
+                                                <TableColumn fx:id="tabOrderProdBegin" minWidth="0.0" prefWidth="130.33331298828125" text="prod_begin" />
+                                                <TableColumn fx:id="tabOrderProdEnd" minWidth="8.0" prefWidth="123.0" text="prod_end" />
                                             </columns>
                                           </TableView>
                                           <DatePicker fx:id="datePickerOrderDate" editable="false" layoutX="48.0" layoutY="10.0" />
@@ -113,7 +113,39 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <ListView layoutX="25.0" layoutY="20.0" prefHeight="692.0" prefWidth="971.0" />
+                        <TabPane fx:id="scadaTabPane" prefHeight="739.0" prefWidth="1024.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <tabs>
+                            <Tab fx:id="tabScadaCon" text="Scada Connections">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <ListView fx:id="listViewScadaConnections" layoutX="27.0" layoutY="21.0" prefHeight="636.0" prefWidth="968.0" />
+                                          <Button layoutX="27.0" layoutY="671.0" mnemonicParsing="false" onAction="#handleAddNewScadaConnection" text="Add New Scada Connection" />
+                                          <Button layoutX="206.0" layoutY="671.0" mnemonicParsing="false" onAction="#handleRemoveScadaConnection" prefHeight="25.0" prefWidth="164.0" text="Remove Scada Connection" />
+                                       </children>
+                                    </AnchorPane>
+                              </content>
+                            </Tab>
+                            <Tab fx:id="tabNewScadaCon" closable="false" disable="true" text="New Scada Connection">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <TextField fx:id="txtFieldScadaIP" layoutX="438.0" layoutY="274.0" />
+                                          <TextField fx:id="txtFieldScadaPort" layoutX="438.0" layoutY="317.0" />
+                                          <Label layoutX="372.0" layoutY="197.0" text="New Scada Connection">
+                                             <font>
+                                                <Font name="System Bold" size="26.0" />
+                                             </font>
+                                          </Label>
+                                          <Button fx:id="btnAddScadaConnection" layoutX="461.0" layoutY="360.0" mnemonicParsing="false" onAction="#handleAddScadaConnection" text="Add Connection" />
+                                          <Label layoutX="400.0" layoutY="278.0" text="IP:" />
+                                          <Label layoutX="394.0" layoutY="321.0" text="Port:" />
+                                       </children>
+                                    </AnchorPane>
+                              </content>
+                            </Tab>
+                          </tabs>
+                        </TabPane>
                      </children>
                   </AnchorPane>
             </content>
